<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ru.agrefj.contactschanger.MainActivity">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sought_digits"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_digits"
        android:maxLength="5"
        android:hint="@string/ex1"
        android:inputType="phone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changed_digits"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:hint="@string/ex2"
        android:id="@+id/et_newDigits"
        android:inputType="phone"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_contacts"
        android:id="@+id/btn_changeContacts" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal" />



</LinearLayout>





